1. Ingress Controller/1-Expose-an-application/httpproxy.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kuard
  namespace: kuard
spec:
  virtualhost:
    fqdn: infra.almacg.com
    tls:
      secretName: kuard-tls-with-lets-encrypt
  routes:
    - services:
        - name: kuard
          port: 80
      conditions:
        - prefix: /
